Trial to fix accordion item collapse

--- a/dash_service/assets/other.css
+++ b/dash_service/assets/other.css
@@ -151,3 +151,11 @@ div.dt-table-container__row.dt-table-container__row-1 {
     align-items: center;
     justify-content: flex-start;
 }
+
+.has-bootstrap .tm-link {
+    font-size: 14px;
+}
+
+.crc-accordion .collapse.show {
+    display: block;
+}
